# uroboros-oauth-rs

./: .env.dev  .gitignore  Cargo.toml
src/: lib.rs
src/adapters/postgres/entities/: mod.rs  organization_member_pg.rs  organization_pg.rs  uroboros_user_auth_data_pg.rs  uroboros_user_pg.rs  user_auth_data_pg.rs  user_pg.rs
src/apps/server/: app.rs  jwt.rs  mod.rs  router.rs  state.rs
src/apps/server/dtos/request/: auth.rs  mod.rs  organization.rs  user.rs
src/apps/server/dtos/response/: auth.rs  map.rs  mod.rs
src/apps/server/routes/: auth.rs  index.rs  mod.rs  organization.rs  uroboros_user.rs
src/domain/: jwt.rs  mod.rs  password.rs  result.rs
src/domain/organization/: member_role.rs
src/domain/uroboros_user/: mod.rs  uroboros_role.rs
src/ports/dtos/: core.rs
src/tests/e2e/: mod.rs
src/tests/e2e/auth/: mod.rs  superadmin.rs
src/tests/e2e/core/: fake.rs  mod.rs  test_client.rs  test_server.rs
src/tests/e2e/scenarios/auth/: default_admin.rs  mod.rs  user.rs
src/tests/e2e/scenarios/organization/: user.rs
src/tests/e2e/scenarios/user/: liefcycle.rs  mod.rs
src/tests/e2e/seed/: user.rs
src/usecases/: init.rs  mod.rs
src/usecases/auth/: add_user_auth_data.rs  add_user_with_auth_data.rs  get_user_and_auth_data.rs  get_user_auth_data.rs  mod.rs  set_user_password.rs  sign_in.rs
src/usecases/organization/: edit_organization.rs  get_organization.rs  mod.rs
src/usecases/uroboros_user/: add_user.rs  ensure_default_admin.rs  ensure_superadmin.rs  get_user.rs  mod.rs
