[package]
name = "uroboros"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server"
path = "src/bin/server.rs"

[dependencies]
anyhow = "1.0.95"
assertables = "9.5.0"
axum = "=0.7.9"
axum-extra = { version = "^0.9.6", features = ["typed-header"] }
axum-test = "=14.2.2"
chrono = "0.4.39"
dotenv = "0.15.0"
fake = { version = "3.0.1", features = ["derive"] }
jsonwebtoken = "9.3.0"
pbkdf2 = "0.12.2"
rand = "0.8.5"
sea-orm = { version = "1.1.0", features = [ "sqlx-postgres", "runtime-tokio-rustls", "macros", "with-uuid", "postgres-array" ] }
sea-query = "0.32.1"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10.8"
tokio = { version = "1.41.1", features = ["full"] }
utoipa = { features = ["axum_extras"], version = "5.2.0" }
utoipa-swagger-ui = { features = ["axum"], version = "8.0.3" }
